<resources>
    <string name="app_name">Tripguide</string>

    /* Tabs */
    <string name="places">Places</string>


    /* Place detail */
    <string name="navigate">Navigate</string>
    <string name="no_available">No available</string>
    <string name="address">Address</string>
    <string name="far_away">far away</string>
    <string name="distance">Distance</string>
    <string name="phone_number">Phone number</string>
    <string name="category">Category</string>
    <string name="hours_today">Hours today</string>
    <string name="open_caps">OPEN</string>

    /* Navigation drawer */
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="favorites">Favorites</string>
    <string name="share">Share</string>

    <string name="communicate">Communicate</string>

    /* Options menu */
    <string name="action_settings">Settings</string>
    <string name="mark_as_duplicated">Mark as duplicated</string>
    <string name="this_place_is_closed">This place is closed</string>
    <string name="remove_all">Remove all</string>

    /* Bottom Menu */
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="tours">Tours</string>


    /* Search Fragment */
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_city_detail">CityDetailActivity</string>
    <string name="loading_place">Loading Place…</string>
    <string name="search_places">Search Places</string>


    /* Buttons */
    <string name="more">More</string>
    <string name="title_activity_place_detail" translatable="false">PlaceDetailActivity</string>
    <string name="large_text">o</string>
    <string name="website">Website</string>
    <string name="edit">Edit</string>
    <string name="suggest_edit">Suggest Edit</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="no_connection">No connection</string>
    <string name="we_could_not_establish_connection">We could not establish a connection
    with our servers. Please try again when you are connected to the internet. </string>
    <string name="we_could_not_establish_connection_scroll">We could not establish a connection
    with our servers. Please swipe down to refresh. </string>
    <string name="no_places_yet">Oops, It looks like there\'s no places yet! Come back later.</string>
    <string name="something_went_wrong">Oops, something went wrong!
        but don\'t worry, we\'re working on it.</string>
    <string name="network_error">Sorry, we could not complete your request</string>
    <string name="try_searching_something">Try searching \"restaurants in Italy\"</string>

    <string name="title_activity_display_image" translatable="false">DisplayImageActivity</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="favorite_message">Mark places as favorite to visualize them
        without internet connection.</string>
    <string name="added_to_favorites">Added to your favorites list.</string>
    <string name="photos">Photos</string>

    /* Location permissions */
    <string name="are_you_sure">Are you sure?</string>
    <string name="location_why">In order to see recommendations near you, we need access to your Location
    under permissions</string>
    <string name="not_now">Not now</string>
    <string name="update_permissions">Update permissions</string>

    /* GPS off */
    <string name="location_services_are_off">Location services are off</string>
    <string name="location_services_why">In order to see recommendations near you, your location
    services must be on.</string>
    <string name="update_settings">Update settings</string>
    <string name="no_image_found">No image found.</string>
    <string name="no_tours_yet">We are working with the tours, please come back later for a better experience</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard</string>
    <string name="phone_copied_to_clipboard">Phone number copied to clipboard</string>
    <string name="website_copied_to_clipboard">Website copied to clipboard</string>
    <string name="change_location">Change location</string>
    <string name="choose_location">Choose a location</string>
    <string name="restaurants">Restaurants</string>
    <string name="beaches">Beaches</string>
    <string name="hotels">Hotels</string>
    <string name="cafes">Cafes</string>
    <string name="parks">Parks</string>
    <string name="in">in</string>
    <string name="network_error_tap_to_retry">We could not establish a connection
    with our servers. Please Tap to retry.</string>
    <string name="ok_got_it">OK, got it!</string>
    <string name="hello_visitor">Hello, visitor!</string>
    <string name="no_thanks">No, thanks.</string>
    <string name="one_last_step">Just one more step!</string>
    <string name="try_again">Try again</string>
    <string name="go">Go</string>
    <string name="about">About</string>
    <string name="tour_feature_message">Make your trip for the most important places in the city.</string>
    <string name="tour_feature_title">Explore the world with our tours.</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="coming_soon">Coming soon</string>
    <string name="ok">OK</string>
    <string name="explore_places_title">Explore my city</string>
    <string name="explore_places_message">We\'ll find your city based on your current location using your GPS connection.</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="please_wait">Please wait…</string>
    <string name="enable_location">Enable location</string>
    <string name="cannot_find_your_location">Sorry, we could not get your location, try again.</string>
    <string name="no_tour_selected">No tour selected</string>
    <string name="name">Name</string>
    <string name="estimated_time">Estimated time</string>
    <string name="distance_in_meters">Distance (in meters)</string>
    <string name="n_a">N/A</string>
    <string name="min">min</string>
    <string name="title_activity_city_tours" translatable="false">CityToursActivity</string>
    <string name="title_activity_single_tour" translatable="false">SingleTourActivity</string>
    <string name="travel">Travel</string>
    <string name="title_activity_running_tour" translatable="false">RunningTourActivity</string>
    <string name="view_place">View place</string>
    <string name="calculating">Calculating…</string>
    <string name="of">Of</string>
    <string name="next">Next</string>
    <string name="we_dit_it">We did it!</string>
    <string name="we_arrived_to">We arrived to</string>
    <string name="profile">Profile</string>
    <string name="please_install_google_maps">Please install Google Maps</string>
    <string name="logout">Logout</string>
    <string name="reviews_number">%d Reviews</string>
    <string name="updating_profile">Updating Profile…</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="sign_in_aborted">Sign in aborted</string>
    <string name="sending_review">Sending review…</string>
    <string name="add_review">Add Review</string>
    <string name="you_are_not_logged_in">You are not logged in.</string>
    <string name="discard">Discard</string>
    <string name="dont_discard">Don\'t Discard</string>
    <string name="reviews">Reviews</string>
    <string name="rate_this_place">Rate this place</string>
    <string name="send_review">Send Review</string>
    <string name="no_reviews_profile">It looks like you have not write any review about your visited places. Start now.</string>
    <string name="add_photo">Add Photo</string>
    <string name="no_reviews_yet_be_first">There is no reviews yet, be the first!</string>
    <string name="write_your_review">Write your review (optional)</string>
    <string name="adding_to_favorites">Adding to favorites…</string>
    <string name="error_displaying_profile">Error displaying profile</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="thanks_for_your_review">Thanks for your review</string>
    <string name="reviews_count">%d Reviews</string>
    <string name="xp_count" formatted="false" translatable="false">%d XP</string>
    <string name="traveler">Traveler</string>
    <string name="visitor">Visitor</string>
    <string name="scout">Scout</string>
    <string name="share_text" formatted="false">Check out %s (%s) at %s: %s</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="delete">Delete</string>
    <string name="share_app">Share App</string>
    <string name="download_app" formatted="false">Download %s from Play store and share your travelling stories and photos: %s</string>
    <string name="download">Download</string>
    <string name="share_profile">Share profile</string>
    <string name="find_me_at_app">Find me at %s</string>
    <string name="remove">Remove</string>
    <string name="removing">Removing...</string>
    <string name="removed">Removed</string>

    /* Onboarding */
    <string name="explore_your_city">Explore your city</string>
    <string name="explore_your_city_content">information, photos and rating about your favorite places</string>
    <string name="rate_visited_places">Rate your visited places</string>
    <string name="rated_visited_places_content">Visit a place, rate it and comment what you think about it.</string>
    <string name="make_a_tour">Make a tour!</string>
    <string name="make_a_tour_content">Check for tours when you visit a new city and save time while traveling.</string>
    <string name="congrats">Congrats!</string>
    <string name="you_completed_tour">You have completed tour: %s</string>
    <string name="from">from</string>
    <string name="choose_region">Choose Region</string>
    <string name="choose_country">Choose Country</string>

</resources>
