<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/change_location" />
        <item
            android:id="@+id/nav_location2"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="Region" />
        <item
            android:id="@+id/nav_location3"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="Country" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share_app" />
        </menu>
    </item>

</menu>
