<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <ImageView
            android:background="@drawable/ic_signal_wifi_off_white_24dp"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp" />


    </FrameLayout>

    <RelativeLayout
        android:layout_gravity="bottom"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/textView2"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:text="@string/we_could_not_establish_connection"
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView1"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            fontPath="fonts/Montserrat/Montserrat-Medium.ttf"
            android:layout_centerHorizontal="true"
            android:text="@string/no_connection"
            android:layout_above="@id/textView2"
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/location_btn"
            android:background="@color/colorAccent"
            android:text="@string/try_again"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:textColor="@color/colorIcon"
            android:layout_below="@id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</LinearLayout>