<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
        app:srcCompat="@drawable/ic_signal_wifi_off_black_24dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:alpha="0.5"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
            android:contentDescription="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:id="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.380" />

        <TextView
            android:textAlignment="center"
            android:text="@string/no_connection"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fontPath="fonts/Montserrat/Montserrat-Medium.ttf"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:id="@+id/textView1"
            tools:ignore="MissingPrefix" />

        <TextView
            android:textAlignment="center"
            android:text="@string/we_could_not_establish_connection"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/colorSecondaryText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:id="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.437" />

</android.support.constraint.ConstraintLayout>