<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blancgrupo.apps.tripguide.presentation.ui.activity.RunningTourActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/place_item_photo"
        app:srcCompat="@drawable/ic_place_white_24dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <TextView
        android:id="@+id/place_item_title"
        android:textSize="28sp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        fontPath="fonts/Montserrat/Montserrat-Light.ttf"
        android:textColor="@color/colorPrimaryText"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_item_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:id="@+id/place_item_location"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_item_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/place_item_distance_title"
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_below="@+id/place_item_location"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/place_item_distance"
        android:text="@string/calculating"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        fontPath="fonts/Montserrat/Montserrat-Light.ttf"
        android:textSize="40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_item_distance_title"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:indeterminate="false"
        android:layout_height="wrap_content"
        android:layout_below="@+id/place_item_distance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:id="@+id/btn_navigate"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorIcon"
        android:text="@string/navigate"
        android:layout_width="match_parent"
        android:layout_margin="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn"
        android:background="@color/colorAccent"
        android:textColor="@color/colorIcon"
        android:text="@string/view_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/current_page"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        fontPath="fonts/Montserrat/Montserrat-Light.ttf"
        android:textColor="@color/colorSecondaryText"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp" />

</RelativeLayout>
