<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.elyeproj.loaderviewlibrary.LoaderImageView
            android:id="@+id/tour_type_header_image"
            android:layout_width="match_parent"
            android:background="@color/colorPlaceholder"
            android:layout_height="200dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/tour_type_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="fonts/Montserrat/Montserrat-Light.ttf"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display4"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tour_type_title_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_below="@+id/tour_type_title_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tour_type_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontPath="fonts/Montserrat/Montserrat-Light.ttf"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display4"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tour_type_title_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tour_type_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estimated_time"
                android:layout_below="@+id/tour_type_time_text"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tour_type_distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                fontPath="fonts/Montserrat/Montserrat-Light.ttf"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display4"
                android:textSize="30sp"
                android:layout_alignBaseline="@+id/tour_type_time_text"
                android:layout_alignBottom="@+id/tour_type_time_text"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30dp" />

            <TextView
                android:id="@+id/tour_type_distance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance_in_meters"
                android:layout_below="@+id/tour_type_distance_text"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:id="@id/btn"
                android:text="@string/go"
                android:background="@color/colorAccent"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorIcon"
                android:layout_width="match_parent"
                android:layout_below="@id/tour_type_distance_title"
                android:layout_height="wrap_content" />


        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>